Replacing the previous code

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
 <body>
     <div class="shopping-list">
+        <h2> Welcome to your shopping list</h2>
       <form class="shopping" autocomplete="off">
-        <input type="text" name="item" id="item" required>
+        <input type="text" name="item" id="item" placeholder="What are you running out of?"required>
         <button type="submit" class="btn">+ Add me to the list</button>
       </form>
   
