--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
   
       <ul class="list"></ul>
     </div>
+
+    <div class="clock">
+      <div class="clock-interface">
+        <div class="hand hour-hand"></div>
+        <div class="hand minute-hand"></div>
+        <div class="hand second-hand"></div>
+      </div>
+    </div>
   
     <script src="./script.js"></script>
   </body>
