--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+/* A big clock */
 
   <div class="clock">
     <div class="clock-interface">
@@ -21,6 +22,11 @@
     </div>
   </div>
   
+  /* A small clock */
+
+  <div class="small-clock"></div>
+
+  /* A shopping list */
     <div class="shopping-list">
         <h2 class="title"> Welcome to your shopping list</h2>
       <form class="shopping" autocomplete="off">
