--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-/* A big clock */
+<!-- A big clock --> 
 
   <div class="clock">
     <div class="clock-interface">
@@ -22,11 +22,11 @@
     </div>
   </div>
   
-  /* A small clock */
+ <!-- A small clock --> 
 
   <div class="small-clock"></div>
 
-  /* A shopping list */
+  <!-- A shopping list -->
     <div class="shopping-list">
         <h2 class="title"> Welcome to your shopping list</h2>
       <form class="shopping" autocomplete="off">
